# Interlude

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  database.rs  ffmpeg.rs  lib.rs  library.rs  main.rs  stream_cache.rs  streaming.rs
src/components/: ProtectedRoute.tsx
src/components/common/: AlbumArt.tsx  SpotifyCredentialsBanner.tsx
src/components/icons/: index.tsx
src/components/layout/: GlobalSearchBar.tsx  Layout.tsx  PlayerBar.tsx  Sidebar.tsx  Titlebar.tsx
src/contexts/: GradientContext.tsx
src/pages/: AdminInviteCodesPage.tsx  AlbumDetailPage.tsx  AlbumsPage.tsx  ArtistDetailPage.tsx  ArtistsPage.tsx  AuthCallbackPage.tsx  AuthPage.tsx  HomePage.tsx  LibraryPage.tsx  ProfileSettingsPage.tsx  SearchPage.tsx  SettingsPage.tsx  SmartPlaylistPage.tsx  SpotiFlacPage.tsx  StatisticsPage.tsx
src/stores/: authStore.ts  libraryStore.ts  playerStore.ts  streamingStore.ts
src/styles/: globals.css
src/types/: index.ts  streaming.ts
src/utils/: format.ts
supabase/migrations/: 001_invite_codes.sql  002_profile_enhancements.sql
