[package]
name = "hiflac"
version = "1.0.0"
description = "High-Resolution FLAC Music Player"
authors = ["HiFlac"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-all", "dialog-all", "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
symphonia = { version = "0.5", features = ["flac", "wav", "alac", "mp3", "aac", "ogg", "vorbis", "isomp4"] }
cpal = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2.4"
blake3 = "1.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.11"
id3 = "1.13"
metaflac = "0.2"
lofty = "0.18"
image = "0.24"
base64 = "0.22"
thiserror = "1.0"
once_cell = "1.19"
lazy_static = "1.4"
# Streaming dependencies
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
urlencoding = "2.1"
regex = "1.10"
dirs = "5.0"
zip = "0.6"
quick-xml = "0.36"
# Audio resampling
rubato = "0.15"

[profile.dev]
opt-level = 1  # Basic optimization for faster runtime (0=none, 1=basic, 2=more, 3=max)

[profile.dev.package."*"]
opt-level = 3  # Optimize dependencies fully (they don't change often)

[profile.release]
lto = "thin"     # Link-time optimization
codegen-units = 1
strip = true     # Strip symbols for smaller binary
